[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.47.2",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
]
